[gd_scene load_steps=9 format=2]

[ext_resource path="res://graphics/BubbleCorner.png" type="Texture" id=1]
[ext_resource path="res://graphics/BubbleRectangle.png" type="Texture" id=2]
[ext_resource path="res://src/ChatBubble.gd" type="Script" id=3]
[ext_resource path="res://src/Content.gd" type="Script" id=4]
[ext_resource path="res://font/besley/Besley-Fatface.otf" type="DynamicFontData" id=6]
[ext_resource path="res://font/besley/Besley-Bold.otf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=2]
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
use_filter = true
font_data = ExtResource( 7 )

[node name="Button" type="Button"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 12.0
margin_bottom = 20.0
mouse_filter = 2
custom_fonts/font = SubResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
bubbleMessage = "TEST TEST TEST TEST "

[node name="ChatBubbleIcon" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )

[node name="BubbleTopLeft" type="Sprite" parent="ChatBubbleIcon"]
texture = ExtResource( 1 )

[node name="BubbleTopRight" type="Sprite" parent="ChatBubbleIcon"]
position = Vector2( 5000, 0 )
scale = Vector2( -1, 1 )
texture = ExtResource( 1 )

[node name="BubbleBottomLeft" type="Sprite" parent="ChatBubbleIcon"]
position = Vector2( 0, 4000 )
scale = Vector2( 1, -1 )
texture = ExtResource( 1 )

[node name="BubbleBottomRigh" type="Sprite" parent="ChatBubbleIcon"]
position = Vector2( 5000, 4000 )
scale = Vector2( -1, -1 )
texture = ExtResource( 1 )

[node name="BubbleContentRectangle" type="Sprite" parent="ChatBubbleIcon"]
position = Vector2( 2500, 2000 )
scale = Vector2( 3920, 2920 )
texture = ExtResource( 2 )

[node name="BubbleLeft" type="Sprite" parent="ChatBubbleIcon"]
position = Vector2( 0, 2000 )
scale = Vector2( 1080, 2920 )
texture = ExtResource( 2 )

[node name="BubbleRight" type="Sprite" parent="ChatBubbleIcon"]
position = Vector2( 5000, 2000 )
scale = Vector2( 1080, 2920 )
texture = ExtResource( 2 )

[node name="BubbleTop" type="Sprite" parent="ChatBubbleIcon"]
position = Vector2( 2500, 0 )
scale = Vector2( 3920, 1080 )
texture = ExtResource( 2 )

[node name="BubbleBottom" type="Sprite" parent="ChatBubbleIcon"]
position = Vector2( 2500, 4000 )
scale = Vector2( 3920, 1080 )
texture = ExtResource( 2 )

[node name="Content" type="Label" parent="ChatBubbleIcon"]
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 107.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 5 )
text = "efsdfsdfs"
align = 1
valign = 1
autowrap = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
